--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "./index.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/",
+            "dest": "/index.js",
             "methods": [
                 "GET",
                 "POST",
@@ -24,5 +24,11 @@
                 "Access-Control-Allow-Credentials": "true"
             }
         }
-    ]
+    ],
+    "functions": {
+        "index.js": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    }
 }
