--- a/vercel.json
+++ b/vercel.json
@@ -24,5 +24,10 @@
                 "Access-Control-Allow-Credentials": "true"
             }
         }
-    ]
+    ],
+    "functions": {
+        "index.js": {
+            "maxDuration": 25
+        }
+    }
 }
